--- a/platforms/android/assets/www/reportar.html
+++ b/platforms/android/assets/www/reportar.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Rota Segura USP</title>
+<title>Rota Segura USP - Reportar um Incidente</title>
 
 <!-- Bootstrap -->
 <link href="css/bootstrap.css" rel="stylesheet">
@@ -22,9 +22,9 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="defaultNavbar1">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="index.html">Home<span class="sr-only">(current)</span></a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="rota.html">Calcular Rota</a></li>
-        <li><a href="reportar.html">Reportar um incidente</a></li>
+        <li><a href="reportar.html" class="active">Reportar um incidente <span class="sr-only">(current)</span></a></li>
       </ul>
     </div>
     <!-- /.navbar-collapse --> 
@@ -34,23 +34,17 @@
 <div class="container-fluid">
   <div class="row">
     <div class="col-md-6 col-md-offset-3">
-      <h1 class="text-center">Rota Segura USP</h1>
+      <h1 class="text-center">Reportar um Incidente</h1>
     </div>
   </div>
   <hr>
 </div>
 <div class="container">
   <div class="row">
-    <div class="text-justify col-sm-4">
-      <p> O <strong>Rota Segura</strong> é um aplicativo criado por alunos do IME USP com o objetivo de calcular a rota de menor risco para ir de A à B no campus Butantã. </p>
+    <div class="col-xs-12">
+      <p> [ map stuff goes here ]</p>
       <p>&nbsp;</p>
     </div>
-    <div class="col-sm-4 text-justify">
-      <p>O <strong>Rota Segura</strong> envia notificações ao seu celular caso você esteja se aproximando de uma região do campus que é considerada <strong>de risco</strong>.</p>
-      <p>&nbsp;</p>
-    </div>
-    <div class="col-sm-4 text-justify">... se tiver mais alguam coisa para add aqui.</div>
-  </div>
   <hr>
   <div class="row">
     <div class="text-center col-md-6 col-md-offset-3">
