--- a/www/reportar.html
+++ b/www/reportar.html
@@ -39,18 +39,76 @@
   </div>
   <hr>
 </div>
-<div class="container">
-  <div class="row">
-    <div class="col-xs-12">
-      <p> [ map stuff goes here ]</p>
-      <p>&nbsp;</p>
+<div class="container text-center col-md-6 col-md-offset-3">
+  <form method="post" role="form">
+         <div class="form-group">
+            <div class="text-justify col-md-pull-6">
+               <p>
+               <label for="txtIncidente">Tipo de incidente:</label> 
+               <br>
+               <select name="txtIncidente">
+               	<option value="assassinato">Assassinato</option>
+               	<option value="furto">Furto</option>
+                <option value="roubo">Roubo</option>
+                <option value="sequestro">Sequestro</option>
+                </select>
+                </p>
+            <br>
+            <p>
+               <label for="arrival-time">Data e horário do ocorrido:</label> 
+               <br>
+               <input id="arrival-time" name="arrival-time " type="datetime-local">
+               </p>
+<br>
+			<p>
+               <input type="submit" class="btn btn-default" id="btnEnviar" name="btnEnviar" value="Enviar" />
+               </p>
+               </div>
+         </div>
+      </form>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDHqMhBw4bppEBwApC1DhufHrlTtWcXZjw&libraries=visualization&sensor=true_or_false">
+</script>
+ <script>
+// In the following example, markers appear when the user clicks on the map.
+// Each marker is labeled with a single alphabetical character.
+var labels = 'ABCDEFGHIJKLMNOPQRSTUVWXYZ';
+var labelIndex = 0;
+
+function initialize() {
+  var bangalore = { lat: 12.97, lng: 77.59 };
+  var map = new google.maps.Map(document.getElementById('map'), {
+    zoom: 12,
+    center: bangalore
+  });
+
+  // This event listener calls addMarker() when the map is clicked.
+  google.maps.event.addListener(map, 'click', function(event) {
+    addMarker(event.latLng, map);
+  });
+
+  // Add a marker at the center of the map.
+  addMarker(bangalore, map);
+}
+
+// Adds a marker to the map.
+function addMarker(location, map) {
+  // Add the marker at the clicked location, and add the next-available label
+  // from the array of alphabetical characters.
+  var marker = new google.maps.Marker({
+    position: location,
+    label: labels[labelIndex++ % labels.length],
+    map: map
+  });
+}
+
+google.maps.event.addDomListener(window, 'load', initialize);
+    </script>
+  
+       <div id="map"></div>
     </div>
-  <hr>
   <div class="row">
     <div class="text-center col-md-6 col-md-offset-3">
       <p>Copyright &copy; 2015 &middot; All Rights Reserved &middot; <a href="http://yourwebsite.com/" >My Website</a></p>
-    </div>
-  </div>
   <hr>
 </div>
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) --> 
@@ -58,5 +116,6 @@
 
 <!-- Include all compiled plugins (below), or include individual files as needed --> 
 <script src="js/bootstrap.js"></script>
+</div>
 </body>
 </html>
