--- a/www/index.html
+++ b/www/index.html
@@ -49,7 +49,10 @@
       <p>O <strong>Rota Segura</strong> envia notificações ao seu celular caso você esteja se aproximando de uma região do campus que é considerada <strong>de risco</strong>.</p>
       <p>&nbsp;</p>
     </div>
-    <div class="col-sm-4 text-justify">... se tiver mais alguam coisa para add aqui.</div>
+    <div class="col-sm-4 text-justify">
+      <input type="checkbox" id="monitoramento" value="S">
+      <label for="monitoramento">Monitorar locais perigosos</label>
+    </div>
   </div>
   <hr>
   <div class="row">
@@ -66,28 +69,7 @@
 <script src="js/bootstrap.js"></script>
 
 <script src="cordova.js"></script>
-<script>
-document.addEventListener('deviceready', function() {
-
-   var watchID = navigator.geolocation.watchPosition(
-      onSuccess, onError, { timeout: 30000 });
-   cordova.plugins.backgroundMode.enable();
-   
-});
-
-
-function onSuccess(position) {
-   // TODO: notificar quando passar próximo a um ponto de risco
-   
-   //navigator.notification.vibrate(2500);
-}
-
-function onError(error) {
-    alert('code: '    + error.code    + '\n' +
-          'message: ' + error.message + '\n');
-}
-
-</script>
+<script src="js/monitoramento.js"></script>
 
 </body>
 </html>
