--- a/www/index.html
+++ b/www/index.html
@@ -46,18 +46,12 @@
       <p>&nbsp;</p>
     </div>
     <div class="col-sm-4 text-justify">
-      <p>O <strong>Rota Segura</strong> envia notificações ao seu celular caso você esteja se aproximando de uma região do campus que é considerada <strong>de risco</strong>.</p>
+      <p>Ele envia notificações ao seu celular caso você esteja se aproximando de uma região do campus que é considerada <strong>de risco</strong>.</p>
       <p>&nbsp;</p>
     </div>
     <div class="col-sm-4 text-justify">
       <input type="checkbox" id="monitoramento" value="S">
       <label for="monitoramento">Monitorar locais perigosos</label>
-    </div>
-  </div>
-  <hr>
-  <div class="row">
-    <div class="text-center col-md-6 col-md-offset-3">
-      <p>Copyright &copy; 2015 &middot; All Rights Reserved &middot; <a href="http://yourwebsite.com/" >My Website</a></p>
     </div>
   </div>
   <hr>
