--- a/www/rota.html
+++ b/www/rota.html
@@ -10,6 +10,8 @@
 <link href="css/bootstrap.css" rel="stylesheet">
 <!-- Aditional style sheet -->
 <link href="css/adicional.css" rel="stylesheet">
+<!-- Google font -->
+<link href='https://fonts.googleapis.com/css?family=Bitter:700' rel='stylesheet' type='text/css'>
 
 </head>
 <body>
@@ -18,8 +20,7 @@
   <div class="container-fluid"> 
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#defaultNavbar1"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
-      <a class="navbar-brand" href="#">Navegação</a></div>
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#defaultNavbar1"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button></div>
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="defaultNavbar1">
       <ul class="nav navbar-nav">
@@ -52,8 +53,6 @@
        
       <form method="post" role="form">
          <div class="form-group">
-            <legend>Criar rotas</legend>
-
             <p>
                <label for="txtEnderecoPartida">Origem:</label> <br>
                <input type="text" class="form-control" id="txtEnderecoPartida" name="txtEnderecoPartida" />
@@ -87,6 +86,7 @@
 </script>
    
 <script src="js/mapa.js"></script>
+<hr>
    
 </body>
 </html>
