--- a/platforms/android/assets/www/index.html
+++ b/platforms/android/assets/www/index.html
@@ -10,6 +10,8 @@
 <link href="css/bootstrap.css" rel="stylesheet">
 <!-- Aditional style sheet -->
 <link href="css/adicional.css" rel="stylesheet">
+<!-- Google font -->
+<link href='https://fonts.googleapis.com/css?family=Bitter:700' rel='stylesheet' type='text/css'>
 
 </head>
 <body>
@@ -17,8 +19,7 @@
   <div class="container-fluid"> 
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#defaultNavbar1"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
-      <a class="navbar-brand" href="#">Navegação</a></div>
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#defaultNavbar1"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button></div>
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="defaultNavbar1">
       <ul class="nav navbar-nav">
@@ -46,18 +47,12 @@
       <p>&nbsp;</p>
     </div>
     <div class="col-sm-4 text-justify">
-      <p>O <strong>Rota Segura</strong> envia notificações ao seu celular caso você esteja se aproximando de uma região do campus que é considerada <strong>de risco</strong>.</p>
+      <p>Ele envia notificações ao seu celular caso você esteja se aproximando de uma região do campus que é considerada <strong>de risco</strong>.</p>
       <p>&nbsp;</p>
     </div>
     <div class="col-sm-4 text-justify">
       <input type="checkbox" id="monitoramento" value="S">
       <label for="monitoramento">Monitorar locais perigosos</label>
-    </div>
-  </div>
-  <hr>
-  <div class="row">
-    <div class="text-center col-md-6 col-md-offset-3">
-      <p>Copyright &copy; 2015 &middot; All Rights Reserved &middot; <a href="http://yourwebsite.com/" >My Website</a></p>
     </div>
   </div>
   <hr>
@@ -69,6 +64,7 @@
 <script src="js/bootstrap.js"></script>
 
 <script src="cordova.js"></script>
+<script src="js/servidor.js"></script>
 <script src="js/monitoramento.js"></script>
 
 </body>
