--- a/www/reportar.html
+++ b/www/reportar.html
@@ -41,71 +41,41 @@
   <hr>
 </div>
 <div class="container text-center col-md-6 col-md-offset-3">
-  <form method="post" role="form">
-         <div class="form-group">
-            <div class="text-justify col-md-pull-6">
-               <p>
-               <label for="txtIncidente">Tipo de incidente:</label> 
-               <br>
-               <select name="txtIncidente">
-               	<option value="assassinato">Assassinato</option>
-               	<option value="furto">Furto</option>
-                <option value="roubo">Roubo</option>
-                <option value="sequestro">Sequestro</option>
-                </select>
-                </p>
+  <form method="get" role="form">
+  
+      <input type="hidden" name="lat" id="lat" class="form-control">
+      <input type="hidden" name="lng" id="lng" class="form-control">
+
+      <div class="form-group">
+         <div class="text-justify col-md-pull-6">
+            <p>
+            <label for="txtIncidente">Tipo de incidente:</label> 
+            <br>
+            <select name="txtIncidente" class="form-control">
+            	<option value="furto">Furto</option>
+               <option value="roubo">Roubo</option>
+               <option value="sequestro">Sequestro</option>
+            	<option value="assassinato">Assassinato</option>
+             </select>
+             </p>
             <br>
             <p>
-               <label for="arrival-time">Data e horário do ocorrido:</label> 
+               <label for="txtDataHora">Data e horário do ocorrido:</label> 
                <br>
-               <input id="arrival-time" name="arrival-time " type="datetime-local">
-               </p>
-<br>
-			<p>
+               <input id="txtDataHora" name="txtDataHora" 
+                      type="datetime-local" class="form-control">
+            </p>
+            <br>
+            
+            <label>Toque no mapa o local aproximado:</label>
+            <div id="map"></div>
+            
+	         <p>
                <input type="submit" class="btn btn-default" id="btnEnviar" name="btnEnviar" value="Enviar" />
-               </p>
-               </div>
+            </p>
          </div>
-      </form>
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDHqMhBw4bppEBwApC1DhufHrlTtWcXZjw&libraries=visualization&sensor=true_or_false">
-</script>
- <script>
-// In the following example, markers appear when the user clicks on the map.
-// Each marker is labeled with a single alphabetical character.
-var labels = 'ABCDEFGHIJKLMNOPQRSTUVWXYZ';
-var labelIndex = 0;
-
-function initialize() {
-  var bangalore = { lat: 12.97, lng: 77.59 };
-  var map = new google.maps.Map(document.getElementById('map'), {
-    zoom: 12,
-    center: bangalore
-  });
-
-  // This event listener calls addMarker() when the map is clicked.
-  google.maps.event.addListener(map, 'click', function(event) {
-    addMarker(event.latLng, map);
-  });
-
-  // Add a marker at the center of the map.
-  addMarker(bangalore, map);
-}
-
-// Adds a marker to the map.
-function addMarker(location, map) {
-  // Add the marker at the clicked location, and add the next-available label
-  // from the array of alphabetical characters.
-  var marker = new google.maps.Marker({
-    position: location,
-    label: labels[labelIndex++ % labels.length],
-    map: map
-  });
-}
-
-google.maps.event.addDomListener(window, 'load', initialize);
-    </script>
-  
-       <div id="map"></div>
+      </div>
+   </form>
     <hr>
     </div>
   
@@ -114,5 +84,11 @@ google.maps.event.addDomListener(window, 'load', initialize);
 
 <!-- Include all compiled plugins (below), or include individual files as needed --> 
 <script src="js/bootstrap.js"></script>
+
+<script src="cordova.js"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDHqMhBw4bppEBwApC1DhufHrlTtWcXZjw&libraries=visualization&sensor=true_or_false">
+</script>
+<script src="js/marcacao.js"></script>
+
 </body>
 </html>
