--- a/www/rota.html
+++ b/www/rota.html
@@ -27,6 +27,7 @@
         <li><a href="index.html">Home</a></li>
         <li class="active"><a href="rota.html">Calcular Rota<span class="sr-only">(current)</span></a></li>
         <li><a href="reportar.html">Reportar um incidente</a></li>
+        <li><a href="metodologia.html">Metodologia</a></li>
       </ul>
     </div>
     <!-- /.navbar-collapse --> 
@@ -85,7 +86,6 @@
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDHqMhBw4bppEBwApC1DhufHrlTtWcXZjw&libraries=visualization&sensor=true_or_false">
 </script>
    
-<script src="js/servidor.js"></script>
 <script src="js/mapa.js"></script>
 <hr>
    
