--- a/www/metodologia.html
+++ b/www/metodologia.html
@@ -36,16 +36,25 @@
 <div class="container-fluid">
   <div class="row">
     <div class="col-md-6 col-md-offset-3">
-      <h1 class="text-center">Reportar um Incidente</h1>
+      <h1 class="text-center">Metodologia</h1>
     </div>
   </div>
   <hr>
 </div>
 <div class="container text-justify col-md-6 col-md-offset-3">
- [your text goes here]
-
-    <hr>
-    </div>
+  <p>O Rota Segura calcula um índice de perigo para qualquer lugar na Cidade Universitária. O índice é baseado em ocorrências de violência documentadas tanto por usuários do Rota Segura quanto por fontes de notícia (como o <em>Jornal do Campus</em> e a <em>Folha de S. Paulo</em>). O índice leva em conta onde e há quanto tempo os indicentes ocorreram. Um lugar terá um índice alto se ocorreram vários indicentes recentes próximos ao local.</p>
+  <p>Matematicamente, o índice de perigo de um ponto p é dado pela seguinte fórmula:</p>
+  <img class="math" alt="perigo(p) = \sum_{i=1}^{n} \frac{1}{\alpha + dist(p, p_i)} \times \frac{1}{\sqrt{\beta + tempo(t_i)}}"  src="img/formula.png">
+  <p>onde <em>{p1, ..., pn}</em> são pontos próximos a <em>p</em> (dentro de um raio <em>&gamma;</em>).</p>
+  <img class="math" alt="Diagrama" src="img/diagrama.png">
+  <p>Quando um usuário do Rota Segura anda por um local perigoso, recebe um alerta do aplicativo.</p>
+  <p>O Rota Segura é software livre e seu código está disponível no GitHub:</p>
+  <ul>
+    <li>Back-end: <a href="http://github.com/andre-yai/rotasegura">andre-yai/rotasegura</a></li>
+    <li>Front-end: <a href="http://github.com/veronicastocco/rotasegura-ui">veronicastocco/rotasegura-ui</a></li>
+  </ul>
+  <hr>
+</div>
   
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) --> 
 <script src="js/jquery-1.11.2.min.js"></script>
