Minor fix (lowercase)

--- a/www/metodologia.html
+++ b/www/metodologia.html
@@ -24,7 +24,7 @@
     <div class="collapse navbar-collapse" id="defaultNavbar1">
       <ul class="nav navbar-nav">
         <li><a href="index.html">Home</a></li>
-        <li><a href="rota.html">Calcular Rota</a></li>
+        <li><a href="rota.html">Calcular rota</a></li>
         <li><a href="reportar.html">Reportar um incidente</a></li> 
         <li><a href="metodologia.html" class="active">Metodologia <span class="sr-only">(current)</span></a></li>
       </ul>
