--- a/www/rota.html
+++ b/www/rota.html
@@ -25,7 +25,7 @@
     <div class="collapse navbar-collapse" id="defaultNavbar1">
       <ul class="nav navbar-nav">
         <li><a href="index.html">Home</a></li>
-        <li class="active"><a href="rota.html">Calcular Rota<span class="sr-only">(current)</span></a></li>
+        <li class="active"><a href="rota.html">Calcular rota<span class="sr-only">(current)</span></a></li>
         <li><a href="reportar.html">Reportar um incidente</a></li>
         <li><a href="metodologia.html">Metodologia</a></li>
       </ul>
