--- a/www/metodologia.html
+++ b/www/metodologia.html
@@ -43,7 +43,7 @@
 </div>
 <div class="container text-justify col-md-6 col-md-offset-3">
   <p>O Rota Segura calcula um índice de perigo para qualquer lugar na Cidade Universitária. O índice é baseado em ocorrências de violência documentadas tanto por usuários do Rota Segura quanto por fontes de notícia (como o <em>Jornal do Campus</em> e a <em>Folha de S. Paulo</em>). O índice leva em conta onde e há quanto tempo os indicentes ocorreram. Um lugar terá um índice alto se ocorreram vários indicentes recentes próximos ao local.</p>
-  <p>Matematicamente, o índice de perigo de um ponto p é dado pela seguinte fórmula:</p>
+  <p>Matematicamente, o índice de perigo de um ponto <em>p</em> é dado pela seguinte fórmula:</p>
   <img class="math" alt="perigo(p) = \sum_{i=1}^{n} \frac{1}{\alpha + dist(p, p_i)} \times \frac{1}{\sqrt{\beta + tempo(t_i)}}"  src="img/formula.png">
   <p>onde <em>{p1, ..., pn}</em> são pontos próximos a <em>p</em> (dentro de um raio <em>&gamma;</em>).</p>
   <img class="math" alt="Diagrama" src="img/diagrama.png">
