--- a/www/index.html
+++ b/www/index.html
@@ -43,7 +43,7 @@
 <div class="container">
   <div class="row">
     <div class="text-justify col-sm-4">
-      <p> O <strong>Rota Segura</strong> é um aplicativo criado por alunos do IME USP com o objetivo de calcular a rota de menor risco para ir de A à B no campus Butantã. </p>
+      <p> O <strong>Rota Segura</strong> é um aplicativo criado por alunos do IME USP com o objetivo de calcular a rota de menor risco para ir de A a B no campus Butantã. </p>
       <p>&nbsp;</p>
     </div>
     <div class="col-sm-4 text-justify">
