Import server JS

--- a/www/index.html
+++ b/www/index.html
@@ -65,6 +65,7 @@
 <script src="js/bootstrap.js"></script>
 
 <script src="cordova.js"></script>
+<script src="js/servidor.js"></script>
 <script src="js/monitoramento.js"></script>
 
 </body>
