--- a/www/reportar.html
+++ b/www/reportar.html
@@ -115,5 +115,8 @@ google.maps.event.addDomListener(window, 'load', initialize);
 
 <!-- Include all compiled plugins (below), or include individual files as needed --> 
 <script src="js/bootstrap.js"></script>
+
+<script src="js/servidor.js"></script>
+<script src="js/marcacao.js"></script>
 </body>
 </html>
