--- a/www/rota.html
+++ b/www/rota.html
@@ -85,7 +85,8 @@
 
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDHqMhBw4bppEBwApC1DhufHrlTtWcXZjw&libraries=visualization&sensor=true_or_false">
 </script>
-   
+
+<script src="js/servidor.js"></script>   
 <script src="js/mapa.js"></script>
 <hr>
    
