--- a/www/metodologia.html
+++ b/www/metodologia.html
@@ -45,7 +45,7 @@
   <p>O Rota Segura calcula um índice de perigo para qualquer lugar na Cidade Universitária. O índice é baseado em ocorrências de violência documentadas tanto por usuários do Rota Segura quanto por fontes de notícia (como o <em>Jornal do Campus</em> e a <em>Folha de S. Paulo</em>). O índice leva em conta onde e há quanto tempo os indicentes ocorreram. Um lugar terá um índice alto se ocorreram vários indicentes recentes próximos ao local.</p>
   <p>Matematicamente, o índice de perigo de um ponto <em>p</em> é dado pela seguinte fórmula:</p>
   <img class="math" alt="perigo(p) = \sum_{i=1}^{n} \frac{1}{\alpha + dist(p, p_i)} \times \frac{1}{\sqrt{\beta + tempo(t_i)}}"  src="img/formula.png">
-  <p>onde <em>{p1, ..., pn}</em> são pontos próximos a <em>p</em> (dentro de um raio <em>&gamma;</em>).</p>
+  <p>onde <em>{p1, ..., pn}</em> são os locais das ocorrências próximas a <em>p</em> (dentro de um raio <em>&gamma;</em>).</p>
   <img class="math" alt="Diagrama" src="img/diagrama.png">
   <p>Quando um usuário do Rota Segura anda por um local perigoso, recebe um alerta do aplicativo.</p>
   <p>O Rota Segura é software livre e seu código está disponível no GitHub:</p>
