--- a/platforms/android/assets/www/index.html
+++ b/platforms/android/assets/www/index.html
@@ -24,8 +24,9 @@
     <div class="collapse navbar-collapse" id="defaultNavbar1">
       <ul class="nav navbar-nav">
         <li class="active"><a href="index.html">Home<span class="sr-only">(current)</span></a></li>
-        <li><a href="rota.html">Calcular Rota</a></li>
+        <li><a href="rota.html">Calcular rota</a></li>
         <li><a href="reportar.html">Reportar um incidente</a></li>
+        <li><a href="metodologia.html">Metodologia</a></li>
       </ul>
     </div>
     <!-- /.navbar-collapse --> 
@@ -55,7 +56,6 @@
       <label for="monitoramento">Monitorar locais perigosos</label>
     </div>
   </div>
-  <hr>
 </div>
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) --> 
 <script src="js/jquery-1.11.2.min.js"></script>
