--- a/www/index.html
+++ b/www/index.html
@@ -43,6 +43,7 @@
 </div>
 <div class="container">
   <div class="row">
+  <div class="text-center"><img src="img/icon.png" alt="Rota Segura USP"/> </div>
     <div class="text-justify col-sm-4">
       <p> O <strong>Rota Segura</strong> é um aplicativo criado por alunos do IME USP com o objetivo de calcular a rota de menor risco para ir de A a B no campus Butantã. </p>
       <p>&nbsp;</p>
