--- a/www/index.html
+++ b/www/index.html
@@ -36,6 +36,7 @@
 <div class="container-fluid">
   <div class="row">
     <div class="col-md-6 col-md-offset-3">
+      <div class="text-center"><img class="logo" src="img/icon.png" alt="Rota Segura USP"/> </div>
       <h1 class="text-center">Rota Segura USP</h1>
     </div>
   </div>
@@ -43,7 +44,6 @@
 </div>
 <div class="container">
   <div class="row">
-  <div class="text-center"><img src="img/icon.png" alt="Rota Segura USP"/> </div>
     <div class="text-justify col-sm-4">
       <p> O <strong>Rota Segura</strong> é um aplicativo criado por alunos do IME USP com o objetivo de calcular a rota de menor risco para ir de A a B no campus Butantã. </p>
       <p>&nbsp;</p>
