--- a/www/index.html
+++ b/www/index.html
@@ -37,7 +37,7 @@
   <div class="row">
     <div class="col-md-6 col-md-offset-3">
       <div class="text-center"><img class="logo" src="img/icon.png" alt="Rota Segura USP"/> </div>
-      <h1 class="text-center">Rota Segura USP</h1>
+      <h1 class="text-center">Rota Segura</h1>
     </div>
   </div>
   <hr>
