tirando deviceready do reportar.html

--- a/www/reportar.html
+++ b/www/reportar.html
@@ -48,7 +48,7 @@
                <p>
                <label for="txtIncidente">Tipo de incidente:</label> 
                <br>
-               <select name="txtIncidente">
+               <select name="txtIncidente" class="form-control">
                	<option value="assassinato">Assassinato</option>
                	<option value="furto">Furto</option>
                 <option value="roubo">Roubo</option>
@@ -59,7 +59,7 @@
             <p>
                <label for="arrival-time">Data e horário do ocorrido:</label> 
                <br>
-               <input id="arrival-time" name="arrival-time " type="datetime-local">
+               <input id="arrival-time" name="arrival-time " type="datetime-local" class="form-control">
                </p>
 <br>
 
