--- a/platforms/android/assets/www/index.html
+++ b/platforms/android/assets/www/index.html
@@ -36,6 +36,7 @@
 <div class="container-fluid">
   <div class="row">
     <div class="col-md-6 col-md-offset-3">
+      <div class="text-center"><img class="logo" src="img/icon.png" alt="Rota Segura USP"/> </div>
       <h1 class="text-center">Rota Segura USP</h1>
     </div>
   </div>
