--- a/www/reportar.html
+++ b/www/reportar.html
@@ -42,31 +42,37 @@
   <hr>
 </div>
 <div class="container text-center col-md-6 col-md-offset-3">
-  <form method="post" role="form">
+  <form action="http://localhost:3000/reportar" method="post" role="form">
          <div class="form-group">
             <div class="text-justify col-md-pull-6">
                <p>
-               <label for="txtIncidente">Tipo de incidente:</label> 
+               <label for="tipo">Tipo de incidente:</label> 
                <br>
-               <select name="txtIncidente" class="form-control">
-               	<option value="assassinato">Assassinato</option>
-               	<option value="furto">Furto</option>
-                <option value="roubo">Roubo</option>
-                <option value="sequestro">Sequestro</option>
+               <select name="tipo" class="form-control">
+               	<option value="Furto">Furto</option>
+                <option value="Roubo">Roubo</option>
+                <option value="Sequestro">Sequestro</option>
+               	<option value="Assassinato">Assassinato</option>
                 </select>
                 </p>
             <br>
             <p>
-               <label for="arrival-time">Data e horário do ocorrido:</label> 
+               <label for="hora">Data e horário do ocorrido:</label> 
                <br>
-               <input id="arrival-time" name="arrival-time " type="datetime-local" class="form-control">
+               <input id="arrival-time" name="hora" type="datetime-local" class="form-control">
                </p>
-<br>
+               <br>
+
+               <label for="info">O que ocorreu:</label> 
+               <br>
+               <textarea name="info"></textarea>
+               <br><br>
 
                <label>Toque no mapa o local aproximado:</label>
                <div id="map"></div>               
                
-			<p>
+	       <p>
+               <br> 
                <input type="submit" class="btn btn-default" id="btnEnviar" name="btnEnviar" value="Enviar" />
                </p>
                </div>
