--- a/www/rota.html
+++ b/www/rota.html
@@ -26,7 +26,7 @@
       <ul class="nav navbar-nav">
         <li><a href="index.html">Home</a></li>
         <li class="active"><a href="rota.html">Calcular rota<span class="sr-only">(current)</span></a></li>
-        <li><a href="reportar.html">Reportar um incidente</a></li>
+        <li><a href="https://docs.google.com/forms/d/1nFfaYv2hiEir2cFXp9a8IaIayFtkJF0_cjK9txi8LMU/viewform?c=0&w=1">Reportar um incidente</a></li>
         <li><a href="metodologia.html">Metodologia</a></li>
       </ul>
     </div>
