Normal case for page titles

--- a/www/rota.html
+++ b/www/rota.html
@@ -43,7 +43,7 @@
    
   <div class="row">
     <div class="col-md-6 col-md-offset-3">
-      <h1 class="text-center">Calcular rota</h1>
+      <h1 class="text-center">Calcular Rota</h1>
     </div>
   </div>
   <hr>
